--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
 Django==1.6.5
+Pillow==2.5.3
+South==1.0
 dj-database-url==0.3.0
 dj-static==0.0.6
+django-allauth==0.18.0
+django-crispy-forms==1.4.0
+django-tastypie==0.12.0
 django-toolbelt==0.0.1
 gunicorn==19.0.0
+oauthlib==0.6.3
 psycopg2==2.5.3
+python-dateutil==2.2
+python-mimeparse==0.1.4
+python-openid==2.2.5
+requests==2.4.1
+requests-oauthlib==0.4.1
+six==1.8.0
 static3==0.5.1
 wsgiref==0.1.2
