--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ South==1.0
 dj-database-url==0.3.0
 dj-static==0.0.6
 django-crispy-forms==1.4.0
+django-storages==1.1.8
 django-tastypie==0.12.0
 django-toolbelt==0.0.1
 gunicorn==19.0.0
