--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ boto==2.32.1
 dj-database-url==0.3.0
 dj-static==0.0.6
 django-allauth==0.18.0
+django-braces==1.4.0
 django-crispy-forms==1.4.0
 django-mailgun==0.2.2
 django-storages==1.1.8
