blog email subscriptions

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,23 +2,30 @@ Django==1.7.1
 Pillow==2.5.3
 South==1.0
 WebOb==1.4
+amqp==1.4.6
+anyjson==0.3.3
 beautifulsoup4==4.3.2
+billiard==3.3.0.19
 boto==2.32.1
 dj-database-url==0.3.0
 dj-static==0.0.6
 django-allauth==0.18.0
 django-braces==1.4.0
+django-common-helpers==0.6.3
 django-crispy-forms==1.4.0
-django-mailgun==0.2.2
 django-storages==1.1.8
 django-tastypie==0.12.1
 django-toolbelt==0.0.1
+freezegun==0.2.8
 gunicorn==19.0.0
+kombu==3.0.24
 oauthlib==0.6.3
 psycopg2==2.5.3
 python-dateutil==2.3
 python-mimeparse==0.1.4
 python-openid==2.2.5
+pytz==2014.10
+redis==2.10.3
 requests==2.4.1
 requests-oauthlib==0.4.1
 six==1.8.0
