--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-allauth==0.18.0
 django-braces==1.4.0
 django-common-helpers==0.6.3
 django-crispy-forms==1.4.0
+django-cron==0.3.5
 django-storages==1.1.8
 django-tastypie==0.12.1
 django-toolbelt==0.0.1
