--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-braces==1.4.0
 django-common-helpers==0.6.3
 django-crispy-forms==1.4.0
 django-cron==0.3.5
+django-mailgun==0.2.2
 django-storages==1.1.8
 django-tastypie==0.12.1
 django-toolbelt==0.0.1
