--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,14 @@ django-common-helpers==0.6.3
 django-crispy-forms==1.4.0
 django-cron==0.3.5
 django-mailgun==0.2.2
+django-pipeline==1.4.4.1
 django-storages==1.1.8
 django-tastypie==0.12.1
 django-toolbelt==0.0.1
 django-webtest==1.7.7
 factory-boy==2.4.1
 freezegun==0.2.8
+futures==2.2.0
 gunicorn==19.0.0
 kombu==3.0.24
 oauthlib==0.6.3
