--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,8 @@ django-braces==1.4.0
 django-common-helpers==0.6.3
 django-crispy-forms==1.4.0
 django-cron==0.3.5
+django-htmlmin==0.7.0
 django-mailgun==0.2.2
-django-pipeline==1.4.4.1
 django-storages==1.1.8
 django-tastypie==0.12.1
 django-toolbelt==0.0.1
@@ -21,6 +21,7 @@ factory-boy==2.4.1
 freezegun==0.2.8
 futures==2.2.0
 gunicorn==19.0.0
+html5lib==0.999
 kombu==3.0.24
 oauthlib==0.6.3
 Pillow==2.5.3
