--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
+Django==1.7.7
+Pillow==2.5.3
+South==1.0
+WebOb==1.4
+WebTest==2.0.17
 amqp==1.4.6
 anyjson==0.3.3
+argparse==1.3.0
 beautifulsoup4==4.3.2
 billiard==3.3.0.19
-boto==2.32.1
+boto==2.36.0
+defusedxml==0.4.1
 dj-database-url==0.3.0
 dj-static==0.0.6
-Django==1.7.1
 django-allauth==0.18.0
 django-braces==1.4.0
 django-common-helpers==0.6.3
 django-crispy-forms==1.4.0
 django-cron==0.3.5
-django-htmlmin==0.7.0
-django-mailgun==0.2.2
-django-storages==1.1.8
 django-tastypie==0.12.1
 django-toolbelt==0.0.1
 django-webtest==1.7.7
@@ -24,18 +27,15 @@ gunicorn==19.0.0
 html5lib==0.999
 kombu==3.0.24
 oauthlib==0.6.3
-Pillow==2.5.3
 psycopg2==2.5.3
 python-dateutil==2.3
 python-mimeparse==0.1.4
 python-openid==2.2.5
+python3-openid==3.0.5
 pytz==2014.10
 redis==2.10.3
-requests==2.4.1
+requests==2.6.0
 requests-oauthlib==0.4.1
 six==1.8.0
-South==1.0
 static3==0.5.1
 waitress==0.8.9
-WebOb==1.4
-WebTest==2.0.17
