--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==1.7.7
 Pillow==2.5.3
+SQLAlchemy==1.0.6
 South==1.0
 WebOb==1.4
 WebTest==2.0.17
@@ -19,6 +20,7 @@ django-common-helpers==0.6.3
 django-crispy-forms==1.4.0
 django-cron==0.3.5
 django-imagekit==3.2.6
+django-postgrespool==0.3.0
 django-tastypie==0.12.1
 django-toolbelt==0.0.1
 django-webtest==1.7.7
@@ -42,3 +44,4 @@ requests-oauthlib==0.4.1
 six==1.8.0
 static3==0.5.1
 waitress==0.8.9
+whitenoise==2.0.2
