--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django==1.7.7
 Pillow==2.5.3
-South==1.0
+SQLAlchemy==1.0.6
 WebOb==1.4
 WebTest==2.0.17
 amqp==1.4.6
@@ -18,10 +18,13 @@ django-braces==1.4.0
 django-common-helpers==0.6.3
 django-crispy-forms==1.4.0
 django-cron==0.3.5
+django-filter==0.10.0
 django-imagekit==3.2.6
+django-postgrespool==0.3.0
 django-tastypie==0.12.1
 django-toolbelt==0.0.1
 django-webtest==1.7.7
+djangorestframework==3.1.3
 factory-boy==2.4.1
 freezegun==0.2.8
 futures==2.2.0
@@ -42,3 +45,4 @@ requests-oauthlib==0.4.1
 six==1.8.0
 static3==0.5.1
 waitress==0.8.9
+whitenoise==2.0.2
