--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,9 @@ boto==2.36.0
 defusedxml==0.4.1
 dj-database-url==0.3.0
 dj-static==0.0.6
-django-allauth==0.18.0
+django-allauth==0.23.0
 django-appconf==1.0.1
+django-bower==5.0.4
 django-braces==1.4.0
 django-common-helpers==0.6.3
 django-crispy-forms==1.4.0
@@ -21,6 +22,7 @@ django-cron==0.3.5
 django-filter==0.10.0
 django-imagekit==3.2.6
 django-postgrespool==0.3.0
+django-storages-redux==1.3
 django-tastypie==0.12.1
 django-toolbelt==0.0.1
 django-webtest==1.7.7
