--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Django==1.7.7
-Pillow==2.5.3
+Django==1.7.11
+Pillow==3.0.0
 SQLAlchemy==1.0.6
+South==1.0.2
 WebOb==1.4
 WebTest==2.0.17
 amqp==1.4.6
@@ -9,6 +10,7 @@ argparse==1.3.0
 beautifulsoup4==4.3.2
 billiard==3.3.0.19
 boto==2.36.0
+-e git+git@github.com:awwester/crispy-forms-materialize.git@10e8ed0ddf78e8468b70c8797e56746f6cdbb8ac#egg=crispy_forms_materialize-master
 defusedxml==0.4.1
 dj-database-url==0.3.0
 dj-static==0.0.6
@@ -16,7 +18,7 @@ django-allauth==0.23.0
 django-appconf==1.0.1
 django-braces==1.4.0
 django-common-helpers==0.6.3
-django-crispy-forms==1.4.0
+django-crispy-forms==1.5.2
 django-cron==0.3.5
 django-filter==0.10.0
 django-imagekit==3.2.6
@@ -32,17 +34,17 @@ futures==2.2.0
 gunicorn==19.0.0
 html5lib==0.999
 kombu==3.0.24
-oauthlib==0.6.3
+oauthlib==1.0.3
 pilkit==1.1.12
 psycopg2==2.5.3
 python-dateutil==2.3
 python-mimeparse==0.1.4
 python-openid==2.2.5
-python3-openid==3.0.5
+python3-openid==3.0.9
 pytz==2014.10
 redis==2.10.3
-requests==2.6.0
-requests-oauthlib==0.4.1
+requests==2.8.1
+requests-oauthlib==0.5.0
 six==1.8.0
 static3==0.5.1
 waitress==0.8.9
