--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ argparse==1.3.0
 beautifulsoup4==4.3.2
 billiard==3.3.0.19
 boto==2.36.0
--e git+git@github.com:awwester/crispy-forms-materialize.git@10e8ed0ddf78e8468b70c8797e56746f6cdbb8ac#egg=crispy_forms_materialize-master
+-e git+git://github.com/awwester/crispy-forms-materialize.git@10e8ed0ddf78e8468b70c8797e56746f6cdbb8ac#egg=crispy_forms_materialize-master
 defusedxml==0.4.1
 dj-database-url==0.3.0
 dj-static==0.0.6
