--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,8 @@ anyjson==0.3.3
 argparse==1.3.0
 beautifulsoup4==4.3.2
 billiard==3.3.0.19
-boto==2.36.0
--e git+git://github.com/awwester/crispy-forms-materialize.git#egg=crispy_forms_materialize
+boto==2.39.0
+-e git://github.com/awwester/crispy-forms-materialize.git@1c0b9bda13bb4abad140d60b4a10b9ab6bbfdac2#egg=crispy_forms_materialize-origin/HEAD
 defusedxml==0.4.1
 dj-database-url==0.3.0
 dj-static==0.0.6
@@ -23,7 +23,7 @@ django-cron==0.3.5
 django-filter==0.10.0
 django-imagekit==3.3
 django-postgrespool==0.3.0
-django-storages-redux==1.3
+django-s3-storage==0.9.8
 django-tastypie==0.12.1
 django-toolbelt==0.0.1
 django-webtest==1.7.7
