--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ argparse==1.3.0
 beautifulsoup4==4.3.2
 billiard==3.3.0.19
 boto==2.39.0
--e git://github.com/awwester/crispy-forms-materialize.git@1c0b9bda13bb4abad140d60b4a10b9ab6bbfdac2#egg=crispy_forms_materialize
+-e git://github.com/awwester/crispy-forms-materialize.git@1c0b9bda13bb4abad140d60b4a10b9ab6bbfdac2#egg=crispy_forms_materialize-origin/HEAD
 defusedxml==0.4.1
 dj-database-url==0.3.0
 dj-static==0.0.6
@@ -17,6 +17,7 @@ django-allauth==0.25.2
 django-appconf==1.0.1
 django-braces==1.4.0
 django-common-helpers==0.6.3
+django-cors-headers==1.1.0
 django-crispy-forms==1.5.2
 django-filter==0.10.0
 django-imagekit==3.3
